--- a/_pages/works.html
+++ b/_pages/works.html
@@ -1,10 +1,11 @@
 ---
 key: 1
-title: Works
-permalink: /works/
-excerpt: The portfolio&mdash;things I enjoyed creating
-image: pic02.jpg
-background-image: pic02.jpg
+title: My Technical Work
+permalink: /technical-work/
+excerpt: Just ramblings and musings? Nay, nay
+display: mac_coffee.jpg
+image: mac_coffee.jpg
+background-image: mac_coffee.jpg
 ---
 {%
 if site.social.linkedin-square %}
