--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -12,7 +12,7 @@ script: |
 ---
 
 <section>
-  <form id="sendemail" method="post" action="{{ site.data.tokens.mailaction }}">
+  <form id="sendemail" method="post" action="https://formspree.io/twang421@gmail.com">
     <div class="row uniform">
       <div class="6u 12u$(xsmall)">
         <input type="text" name="name" id="name" value="" placeholder="Name" />
@@ -25,10 +25,6 @@ script: |
       </div>
       <div class="12u$">
         <textarea required name="textbody" id="textbody" placeholder="Type your message" rows="6"></textarea>
-      </div>
-      <div class="6u$ 12u$(xsmall)">
-        <img src="{{ site.data.tokens.captchascript }}"/><br />
-        <input required type="text" name="captcha" id="captcha" placeholder="Type the numbers you see" />
       </div>
       <div class="12u$">
         <ul class="actions">
