--- a/_pages/topics.html
+++ b/_pages/topics.html
@@ -46,8 +46,8 @@ background-image: pic01.jpg
           <div class="row uniform 50%">
             <div class="2u"><span class="image fit"><img src="{{ site.baseurl }}/images/drawing_1.jpg" alt="" /></span></div>
             <div class="2u"><span class="image fit"><img src="{{ site.baseurl }}/images/drawing_2.jpg" alt="" /></span></div>
-            <div class="2u"><span class="image fit"><img src="{{ site.baseurl }}/images/ceramic_1.jpg" alt="" /></span></div>
-            <div class="2u"><span class="image fit"><img src="{{ site.baseurl }}/images/jewelry_1.jpg" alt="" /></span></div>
+            <div class="2u"><span class="image fit"><img src="{{ site.baseurl }}/images/ceramic.jpg" alt="" /></span></div>
+            <div class="2u"><span class="image fit"><img src="{{ site.baseurl }}/images/jewelry.jpg" alt="" /></span></div>
             <div class="2u"><span class="image fit"><img src="{{ site.baseurl }}/images/jewelry_2.jpg" alt="" /></span></div>
             <div class="2u"><span class="image fit"><img src="{{ site.baseurl }}/images/snowman.jpg" alt="" /></span></div>
           </div>
